--- a/week 3/Assignment/starter_code/readme
+++ b/week 3/Assignment/starter_code/readme
@@ -4,7 +4,7 @@ dark blue: #033048
 light grey: #606161
 almost black: #121212
 
-Font: Open Sans
+Font: Open Sans (Google Font: https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans)
 Weight: Light, Light Italic, Semibold, Extrabold
 
 Nav: Semibold, 24px
